# Solo

./: CMakeLists.txt  main.c  main.h  readme.md
lib/ble/: explain.txt  hids_client.c  solo_midi_ble.gatt
lib/ble/modified sources/: btstack_hid.h  btstack_hid_parser.c  btstack_hid_parser.h  hids_client.h
lib/hoff/: button.c  common.c  core0.c  core1.c  draw.c  midi.c  midi_ble.c  screen.c  switch.c  sync.c
lib/screen/config/: DEV_Config.c
lib/screen/font/: Font104x60.c  font20x12.c  font24.c  font30x17.c  font68x39.c  fonts.h
lib/screen/font/old/: Font104x60.c  Font110x63.c  Font120x69.c  Font130x75.c  font24 - Copy.c  font32.c
lib/screen/lcd/: LCD_Driver.c  LCD_GUI.c  LCD_GUI.h  LCD_Touch.c  LCD_Touch.h
lib/tusb/: usb_descriptors.c
